--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.24.0",
     "csstype": "^3.0.10",
     "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
     "next": "^12.0.4",
     "pino": "^7.3.0",
     "react": "^17.0.2",
