--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "holocore-show",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "HOLOCORE visual demonstration",
-  "main": "src/index.ts",
+  "main": "pages/index.tsx",
   "repository": "https://github.com/wldh-g/holocore-show",
   "author": "Jio <jio@wldh.org>",
   "license": "MIT",
