--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ NEXT_PUBLIC_API_TYPE="SDRAN"
 
 NEXT_PUBLIC_UE_STATELEVEL="-106,-116,-126,-156"
 NEXT_PUBLIC_CELL_LOADLEVEL="0.95,0.75,0.0"
+NEXT_PUBLIC_SHOW_RAW_NCGI="false"
 
 NEXT_PUBLIC_WANNA_FLY="false"
