--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holocore-show",
-  "version": "1.2.0",
+  "version": "1.3.1",
   "description": "HOLOCORE visual demonstration",
   "main": "pages/index.tsx",
   "repository": "https://github.com/wldh-g/holocore-show",
@@ -24,8 +24,9 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "csstype": "^3.0.10",
+    "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
-    "moment": "^2.29.1",
+    "leaflet-arrowheads": "^1.2.3",
     "next": "^12.0.4",
     "pino": "^7.3.0",
     "react": "^17.0.2",
