updated coloring policy

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-NEXT_PUBLIC_UPDATE_INTERVAL=1000
+NEXT_PUBLIC_UPDATE_INTERVAL=200
 
 NEXT_PUBLIC_API_ENDPOINT="hakos.holocore.space:3324"
 NEXT_PUBLIC_API_TYPE="SDRAN"
 
 NEXT_PUBLIC_UE_STATELEVEL="-106,-116,-126,-156"
-NEXT_PUBLIC_CELL_LOADLEVEL="0.95,0.75,0.0"
+NEXT_PUBLIC_CELL_LOADLEVEL="1.,0.95,0.75,0.0"
 
 NEXT_PUBLIC_ALWAYS_SHOW_UE_TOOLTIP="false"
 NEXT_PUBLIC_SHOW_SINR_CQI="false"
