added HO logic changing button

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ NEXT_PUBLIC_SHOW_SINR_CQI="false"
 NEXT_PUBLIC_SHOW_RAW_NCGI="false"
 
 NEXT_PUBLIC_WANNA_FLY="false"
+NEXT_PUBLIC_HO_LOGICS="local,mylogic"
