--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ NEXT_PUBLIC_ALWAYS_SHOW_UE_TOOLTIP="false"
 NEXT_PUBLIC_USE_ARROWLINE="only-end"
 NEXT_PUBLIC_SHOW_SINR_CQI="false"
 NEXT_PUBLIC_SHOW_RAW_NCGI="false"
+NEXT_PUBLIC_SHOW_CELL_RANGES="true"
+NEXT_PUBLIC_SHOW_UE_ROUTES="true"
 
 NEXT_PUBLIC_WANNA_FLY="false"
 NEXT_PUBLIC_HO_LOGICS="local,mylogic"
